[tool.poetry]
name = "enderswidgets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
ipywidgets = ">=7.6"
pydantic = "^2.9.2"
crunch-cli = "^3.19.1"
plotly = "^5.24.1"
jupyterlab = "^4.2.5"
endersgame = "^1.0.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
